--- a/Android/app/src/main/res/layout/component_advantage_picker2.xml
+++ b/Android/app/src/main/res/layout/component_advantage_picker2.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/text_margin"
     tools:context=".ui.components.AdvantagePicker">
+    <!-- // TODO: style this control to look less awful by default -->
 
     <TextView
         android:id="@+id/label"
@@ -14,7 +15,7 @@
         android:layout_marginHorizontal="@dimen/padding_normal"
         android:layout_marginTop="@dimen/padding_small"
         android:text="@string/label_advantage"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        android:textAppearance="@android:style/TextAppearance.Material.Body1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,13 +31,13 @@
             android:id="@+id/hasNoAdvantage"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/padding_small"
-            android:layout_marginVertical="@dimen/padding_normal"
+            android:layout_marginHorizontal="4dp"
+            android:layout_marginVertical="8dp"
             android:layout_weight="1"
             android:background="@drawable/radio_button_selector"
             android:button="@android:color/transparent"
             android:gravity="center"
-            android:padding="@dimen/padding_normal"
+            android:padding="8dp"
             android:text="@string/label_advantage_none"
             android:textAppearance="@android:style/TextAppearance.Material.Button"
             android:textColor="@color/radio_button_text"
@@ -46,13 +47,13 @@
             android:id="@+id/hasAdvantage"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/padding_small"
-            android:layout_marginVertical="@dimen/padding_normal"
+            android:layout_marginHorizontal="4dp"
+            android:layout_marginVertical="8dp"
             android:layout_weight="1"
             android:background="@drawable/radio_button_selector"
             android:button="@android:color/transparent"
             android:gravity="center"
-            android:padding="@dimen/padding_normal"
+            android:padding="8dp"
             android:text="@string/label_advantage_advantage"
             android:textAppearance="@android:style/TextAppearance.Material.Button"
             android:textColor="@color/radio_button_text"
@@ -62,16 +63,16 @@
             android:id="@+id/hasDisadvantage"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/padding_small"
-            android:layout_marginVertical="@dimen/padding_normal"
+            android:layout_marginHorizontal="4dp"
+            android:layout_marginVertical="8dp"
             android:layout_weight="1"
             android:background="@drawable/radio_button_selector"
             android:button="@android:color/transparent"
             android:gravity="center"
-            android:padding="@dimen/padding_normal"
+            android:padding="8dp"
             android:text="@string/label_advantage_disadvantage"
             android:textAppearance="@android:style/TextAppearance.Material.Button"
             android:textColor="@color/radio_button_text"
             tools:checked="false" />
     </RadioGroup>
-</merge>
+</androidx.constraintlayout.widget.ConstraintLayout>
