--- a/Android/app/src/main/res/layout/fragment_dashboard.xml
+++ b/Android/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,22 +1,175 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.dashboard.DashboardFragment">
 
-    <TextView
-        android:id="@+id/text_dashboard"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_margin="8dp"
+        android:orientation="vertical">
+
+<!--        <include-->
+<!--            layout="@layout/card_monster"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginVertical="8dp" />-->
+
+<!--        <include-->
+<!--            layout="@layout/card_monster"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginVertical="8dp" />-->
+
+<!--        <include-->
+<!--            layout="@layout/card_monster_short"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginVertical="8dp" />-->
+
+<!--        <include-->
+<!--            layout="@layout/card_monster_short"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginVertical="8dp" />-->
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="2">
+
+             <include
+                 layout="@layout/tile_monster"
+                 android:layout_width="0dp"
+                 android:layout_height="wrap_content"
+                 android:layout_columnWeight="1"
+                 android:layout_marginVertical="8dp"/>
+
+             <include
+                 layout="@layout/tile_monster"
+                 android:layout_width="0dp"
+                 android:layout_height="wrap_content"
+                 android:layout_columnWeight="1"
+                 android:layout_marginVertical="8dp" />
+
+            <include
+                layout="@layout/tile_monster_short"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_marginVertical="8dp" />
+
+            <include
+                layout="@layout/tile_monster_short"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_marginVertical="8dp" />
+
+            <include
+                layout="@layout/card_monster"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_marginVertical="8dp"/>
+            <include
+                layout="@layout/card_monster"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_marginVertical="8dp"/>
+<!--            <include-->
+<!--                layout="@layout/tile_monster"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_columnWeight="1"-->
+<!--                android:layout_marginVertical="8dp" />-->
+
+<!--            <include-->
+<!--                layout="@layout/tile_monster"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_columnWeight="1"-->
+<!--                android:layout_marginVertical="8dp" />-->
+
+<!--            <include-->
+<!--                layout="@layout/tile_monster"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_columnWeight="1"-->
+<!--                android:layout_marginVertical="8dp" />-->
+
+<!--            <include-->
+<!--                layout="@layout/tile_monster"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_columnWeight="1"-->
+<!--                android:layout_marginVertical="8dp" />-->
+
+        </GridLayout>
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="2">
+
+            <include
+                layout="@layout/tile_monster_short"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_marginVertical="8dp" />
+
+            <include
+                layout="@layout/tile_monster_short"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_marginVertical="8dp" />
+
+                    <include
+                        layout="@layout/tile_monster_short"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:layout_marginVertical="8dp" />
+
+                    <include
+                        layout="@layout/tile_monster_short"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:layout_marginVertical="8dp" />
+
+                    <include
+                        layout="@layout/tile_monster_short"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:layout_marginVertical="8dp" />
+
+                    <include
+                        layout="@layout/tile_monster_short"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:layout_marginVertical="8dp" />
+
+                    <include
+                        layout="@layout/tile_monster_short"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:layout_marginVertical="8dp" />
+
+                    <include
+                        layout="@layout/tile_monster_short"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:layout_marginVertical="8dp" />
+                </GridLayout>
+    </LinearLayout>
+</ScrollView>
