--- a/Android/app/src/main/res/layout/card_action.xml
+++ b/Android/app/src/main/res/layout/card_action.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/action_card_height"
+    android:layout_height="match_parent"
     android:background="@drawable/rectangle_background">
 
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/padding_normal"
-        android:layout_marginTop="@dimen/padding_small"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginTop="4dp"
 
-        android:textSize="@dimen/action_card_name_text_size"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,11 +25,11 @@
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="@dimen/padding_normal"
-        android:layout_marginBottom="@dimen/padding_normal"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginBottom="8dp"
         android:ellipsize="end"
         android:singleLine="false"
-        android:textSize="@dimen/action_card_description_text_size"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
