--- a/Android/app/src/main/res/layout/card_initiative.xml
+++ b/Android/app/src/main/res/layout/card_initiative.xml
@@ -2,29 +2,29 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/icon_size"
-    android:layout_height="@dimen/icon_size"
+    android:layout_width="40dp"
+    android:layout_height="40dp"
     android:background="@drawable/rectangle_background">
 
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_icon_border_padding"
-        android:text="@string/label_initiative_icon"
+        android:layout_margin="2dp"
         android:textColor="@android:color/primary_text_light"
-        android:textSize="@dimen/text_icon_tiny"
+        android:textSize="8sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="INIT" />
 
     <TextView
-        android:id="@+id/value"
+        android:id="@+id/modifier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/primary_text_light"
-        android:textSize="@dimen/text_icon_size"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
