Makes dashboard views use dimension and string resources.

--- a/Android/app/src/main/res/layout/card_ability_score.xml
+++ b/Android/app/src/main/res/layout/card_ability_score.xml
@@ -10,9 +10,9 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
+        android:layout_margin="@dimen/text_icon_border_padding"
         android:textColor="@android:color/primary_text_light"
-        android:textSize="8sp"
+        android:textSize="@dimen/text_icon_tiny"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,9 +23,9 @@
         android:id="@+id/advantage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
+        android:layout_margin="@dimen/text_icon_border_padding"
         android:textColor="@android:color/primary_text_light"
-        android:textSize="8sp"
+        android:textSize="@dimen/text_icon_tiny"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -35,9 +35,9 @@
         android:id="@+id/proficiency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
+        android:layout_margin="@dimen/text_icon_border_padding"
         android:textColor="@android:color/primary_text_light"
-        android:textSize="8sp"
+        android:textSize="@dimen/text_icon_tiny"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/primary_text_light"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_icon_size"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
